--- a/css/template.less
+++ b/css/template.less
@@ -3,8 +3,9 @@ Abhijeet Bajracharya
 abhijeet@bluebongo.com.au
 */
 
-// normalize
-@import 'normalize.less';
+// GLOBAL RESET
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
+figure{margin: 0; padding: 0;}
 
 // GLOBAL VARIABLES
 
@@ -19,10 +20,11 @@ abhijeet@bluebongo.com.au
 .bold{font-weight:bold}
 .roundedCorners (@radius: 5px) {border-radius: @radius;}
 .transition (@range: all, @time: 0.3s, @ease: ease-in-out) {-moz-transition: @range @time @ease;-webkit-transition: @range @time @ease;-o-transition: @range @time @ease;transition: @range @time @ease;}
+.notransition {-moz-transition: none;-webkit-transition: none;-o-transition: color 0 ease-in;transition: none;}
 .border (@bdclr: @grey, @bdwidth: 1px, @bdtype: solid) {border:@bdclr @bdwidth @bdtype;}
 
 // GLOBAL STYLES
-body{background:url("@{url}/images/mainbackground.jpg") top center no-repeat #f5f5f5;.fontSize; font-family: Arial, sans-serif;}
+body{}
 .floatLeft{float:left;}
 .floatRight{float:right;}
 .clear{clear:both;}
